# AWS-ACCESS-RENEWER

./: .gitignore  LICENSE  PATCH_NOTES.md  README.md  main.py  pyproject.toml  requirements.txt
src/aws_access_renewer/: __main__.py  cli.py
src/aws_access_renewer/core/: aws.py  constants.py  network.py  updater.py
src/aws_access_renewer/ui/: dashboard.py  orchestrator.py  theme.py
tests/: test_logic.py
